2015-04-29  Carl Hetherington  <cth@carlh.net>

	* Allow configuration of the encryption key (from master).

	* Various fixes to bad timeline drag behaviour when
	snapping (from master).

2015-04-29  c.hetherington  <cth@carlh.net>

	* Hand-apply 291179175729b62e17a9c322cd27ae134d1310d9,
	8d92cce7d2885afa13ee4cb6f546dbf43942124b and
	c994839239e84a1f62865ed82fdc090900a66b03 from master;
	stop flickering when dragging in the timeline on OS X.

2015-04-22  c.hetherington  <cth@carlh.net>

	* Add P3 colour conversion preset.

	* Hand-apply all changes relating to colour specification
	as chromaticity.

2015-04-20  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 47770097cf6a5d7dbbdded8977da5f3de53dfd33;
	single-file hashes.

	* Hand-apply e1d0d24146592e311d46781a1961fe080f6357cf;
	attempt to fix confusion with the JPEG2000 bandwidth
	control when a user enters a value directly rather than
	using the spin arrows.

2015-04-16  Carl Hetherington  <cth@carlh.net>

	* Fix potential OS X crashes due to another incarnation
	of the bizarre multi-thread stringstream bug.

2015-04-15  c.hetherington  <cth@carlh.net>

	* Hand-apply 94998e12d117f3f1781dfb1318939debfbf34546 from master;
	add option to restore the default configuration.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 69866d9ba972d21375081c313ac245535ac55be9 from master;
	handle removed ratio if it occurs in old files.

	* Hand-apply c0e0b90d987af2586323d4a67bd67330256da51d from master;
	remove 1.37 ratio and set Academy to 1.375.

	* Hand-apply 83f1ea8eacb4d56860ccdb9db5acdf12c6e71dfb from master;
	ellipsize filters strings if it is long.

	* Hand-apply 24ae3a8f0a68529b50c34079e643caf6b9327523 from master;
	use the number of mapped audio channels for the DCP name, not the
	number of DCP channels (#479).

2015-03-25  Carl Hetherington  <cth@carlh.net>

	* Remove scaler settings and just uses SWS_BICUBIC all round.

	* Hand-apply ec3e6abf817b84d589f0782b01f5059dd3bf0953; only allow